--- a/app/src/main/res/layout/activity_analytics.xml
+++ b/app/src/main/res/layout/activity_analytics.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity.AnalyticsActivity">
+    tools:context=".UserActivity.AnalyticsActivity"
+    android:background="@color/white">
 
     <RelativeLayout
         android:id="@+id/toolBarLy"
@@ -49,7 +50,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@drawable/rectangle_card"
         android:layout_below="@id/pieChart"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
