--- a/app/src/main/res/layout/activity_charging_station.xml
+++ b/app/src/main/res/layout/activity_charging_station.xml
@@ -42,7 +42,7 @@
                 <ImageView
                     android:id="@+id/deleteBtn"
                     android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_height="25dp"
                     android:src="@drawable/baseline_delete_24"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
@@ -90,8 +90,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_below="@id/headerly"
-        tools:listitem="@layout/list_item_charging_station"/>
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/headerly" />
 
     <TextView
         android:layout_width="match_parent"
@@ -124,11 +124,3 @@
 
 
 
-    <!--        <ImageView-->
-    <!--            android:id="@+id/editBtn"-->
-    <!--            android:layout_width="30dp"-->
-    <!--            android:layout_height="30dp"-->
-    <!--            android:src="@drawable/baseline_edit_24"-->
-    <!--            android:layout_alignParentRight="true"-->
-    <!--            android:layout_centerVertical="true"-->
-    <!--            android:layout_marginRight="20dp"/>-->
