--- a/app/src/main/res/layout/activity_otp_verification.xml
+++ b/app/src/main/res/layout/activity_otp_verification.xml
@@ -41,18 +41,20 @@
         android:text="@string/otp_code_instruction"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/otpTxt"/>
 
     <com.chaos.view.PinView
         android:id="@+id/pinview"
-        app:itemCount="4"
-        app:itemWidth="50dp"
-        app:itemHeight="50dp"
+        app:itemCount="6"
+        app:itemWidth="40dp"
+        app:itemHeight="40dp"
        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:itemBackground="@color/white"
