--- a/app/src/main/res/layout/activity_information_page.xml
+++ b/app/src/main/res/layout/activity_information_page.xml
@@ -7,11 +7,12 @@
     tools:context=".UserActivity.InformationPage">
 
 
-
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/prodyct_images_viewpager"
         android:layout_width="match_parent"
         android:layout_height="500dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
         android:contentDescription="@string/app_name">
 
     </androidx.viewpager.widget.ViewPager>
@@ -26,8 +27,6 @@
         app:tabIndicatorHeight="0dp"
         app:tabRippleColor="@null" />
 
-
-
     <Button
         android:id="@+id/skipBtn"
         android:layout_width="wrap_content"
@@ -35,10 +34,10 @@
         android:text="Skip"
         android:textSize="20sp"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="50dp"
         android:backgroundTint="#03AF5F"
-        android:layout_below="@id/viewPager_Indicator"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginBottom="20dp"/>
 
     <Button
         android:id="@+id/nextBtn"
@@ -48,10 +47,10 @@
         android:textSize="20sp"
         android:textColor="#03AF5F"
         android:backgroundTint="#BDFCDF"
-        android:layout_below="@id/viewPager_Indicator"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginBottom="20dp"/>
 
     <Button
         android:id="@+id/gotitBtn"
@@ -61,10 +60,9 @@
         android:textSize="20sp"
         android:visibility="gone"
         android:backgroundTint="#03AF5F"
-        android:layout_below="@id/viewPager_Indicator"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="50dp"
-        android:layout_marginTop="20dp"/>
-
+        android:layout_marginBottom="20dp"/>
 
 </RelativeLayout>
