--- a/app/src/main/res/layout/activity_login_via_phone.xml
+++ b/app/src/main/res/layout/activity_login_via_phone.xml
@@ -60,7 +60,6 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/instructionTxt"/>
 
-
     <com.hbb20.CountryCodePicker
         app:ccp_defaultNameCode="IND"
         android:id="@+id/country_code"
@@ -75,12 +74,14 @@
         android:layout_below="@id/phoneTxt"/>
 
     <EditText
+        android:id="@+id/editPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/country_code"
         android:layout_below="@id/phoneTxt"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/black"
         android:hint="Phone Number"/>
 
     <CheckBox
@@ -92,7 +93,7 @@
         android:layout_marginTop="20dp" />
 
     <Button
-        android:id="@+id/continueBtn"
+        android:id="@+id/sendBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Continue"
