--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -133,7 +133,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="15dp"
                 android:layout_marginBottom="5dp"
-                android:text="Setting"
+                android:text="Settings"
                 android:textColor="#1B1B1B"
                 android:textSize="20sp"
                 android:textStyle="bold" />
