--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="yellow">#E1A901</color>
+    <color name="green">#1E7C22</color>
 </resources>
